	in an HTTP analyzer.

	* Bug fix: Content-Type override did not work for http: and
	https: protocols.

	* SQL query responses now include a type attribute, which also
	indicates NULL results.

	* Added a --shell command line parameter, which starts the
	ESXX Shell.

	* The esxx-js shell wrapper now uses the client Java VM by
	default, for faster startup times. (You could also try to
	generate the shared class dump using the command 
	"java -client -Xshare:dump", which might improve things
	even more.)

	* The SQL query builder now supports JS objects as parameters,
	in which case all enumberable properties will be added as a
	comma-separeted list. Very useful for queries like 
	"SELECT ... WHERE IN (param)".

	* Updated the JSON classes to version 2009-09-11.

0.9.20090521
	* Added the XKCD example from the Wiki.

	* Fixed apps in examples to use req.scriptURI instead of the
	web-server dependent CGI variable SCRIPT_NAME.

	* Added DOCUMENT_ROOT CGI variable in HTTP mode.

	* Added Java EE Servlet support: ESXX can now run inside
	a J2EE application server, such as Glassfish or Tomcat.

	* XSLT parameters may now be specified via the property
	'params' in the ESXX.Response object.

	* A build.xml file is now included in esxx.war, so it can
	easily be rebuilt with custom content.

	* Added 'esxx.host', which refers to a host object that can be
	set when ESXX is embedded. For instance, If ESXX is deployed as a
	Servlet, 'esxx.host' will refer to that Servlet.

	* Added HTTP filter support. And there was much rejoicing.

	* Property requestMethod is now available on the ESXX.Request
	object.

	* Upgraded to Rhino 1.7 release 2 + patch for bug #477233.

	* Added command line option --db-console to start H2's
	database console.

	* Added the "Hello world" and "The Ajax Blog" tutorials to the
	examples.

	* All-new look of error messages and file listings. No more
	references to esxx.org resources, everything is now embedded.

	* Updated to Saxon 9.0.0.8.
